# RoboCar_Platform

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  python_install.txt  requirements.txt  setup.py
Hardware/: README.md
Hardware/RaspberryPi3b+/: README.md
Images/: README.md
OperatingSystem/: README.md
RoboCar/: README.md  __init__.py  robocar_main.py  robocarcontrol_main.py
RoboCar/sensors/: mpu6050.py  rplidar.py
RoboCarTest/: __init__.py  keyboard.py  robocarcontrol_main.py  server.py
RoboCarTest/sensors/: gearmotor.py  imu.py  mpu6050.py  servomotor.py
Schematic/: README.md  drv8838.lib  hc_sr04.lib  motor.lib  pca_9685.lib  robocar_circuit_diagram-cache.lib  robocar_circuit_diagram.pro
circuit_diagram/: README.md
hardware/: README.md
hardware/Motors/: README.md
hardware/Power_Supply/: README.md
hardware/Sensors/: README.md
hardware/chassis/: README.md
include/sensors/: camera.h  gearmotor.h  servomotor.h  ultrasonic.h
os/: README.md
os/Raspbian_LITE/: README.md
os/Ubuntu_MATE/: README.md
pyRoboCarTest/: __init__.py  requirements.txt  robocar_test_main.py  setup.py
pyRoboCarTest/pyRoboCarTest/: camera.py  gearmotor.py  robocar_test_main.py  servo_motor.py
pyRoboCarTest/pyRoboCarTest/sensors/: gearmotor.py  imu.py  servo_motor.py
pyRoboCarTest/sensors/: __init__.py  camera.py  gearmotor.py  imu.py  mpu6050.py  mpu9250.py  servo_motor.py  ultrasonic.py
schematic/: README.md  wago_terminal.lib  wago_terminal_9V.lib
src/: main.cpp
